<resources>
    <string name="app_name">八闽公务用车</string>
    <string name="company_name">八闽集团</string>
    <string name="module_rental_car">公务租车</string>
    <string name="module_special_car">公务专车</string>
    <!--Volley网络连接时没有连接到网络返回值-->
    <string name="no_connection">noConnection</string>
    <!--启动八闽公务专车的包名-->
    <string name="launch_intent_package_name">com.aiton.yc.client</string>
    <!--八闽公务专车服务端地址-->
    <string name="launch_intent_apk_url">http://bmcx.oss-cn-shanghai.aliyuncs.com/apk/BMCK.apk</string>
    <!--TabName-->
    <string-array name="tab">
        <item>首页</item>
        <item>订单</item>
        <item>我的</item>
    </string-array>

    <string name="editor">编辑</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="able_version_unused">当前版本不可用，请去应用商店下载最新版本</string>
    <string name="server_is_upgrading">服务器正在升级，暂停服务</string>
    <string name="not_connect_net">未连接到互联网,请检查网络设置!</string>
    <string name="account_abnormal">你的账号登录异常\n请重新登录</string>
    <string name="double_click_to_exit">双击退出应用</string>
    <string name="net_abnormal">网络异常，请稍候重试!</string>
    <string name="dialog_title">温馨提示</string>
    <string name="uninstalled">你还未安装此应用，是否下载安装！</string>
    <string name="scan_for_download">使用扫一扫功能进行下载</string>
    <string name="today_oil_price">今日油价</string>
    <string name="oil_num_ninety_five">#95</string>
    <string name="oil_num_ninety_two">#92</string>
    <string name="oil_num_ninety">#90</string>
    <string name="oil_num_zore">#0</string>

    <string name="please_choose">请选择</string>
    <string name="get_car_city">取车城市</string>
    <string name="get_car_store">取车门店</string>
    <string name="please_choose_get_car_store">请选择取车门店</string>
    <string name="get_car_time">取车时间</string>

    <string name="send_car_to_home">送车上门</string>
    <string name="return_car_city">还车城市</string>
    <string name="return_car_store">还车门店</string>
    <string name="get_car_from_home">上门取车</string>
    <string name="please_choose_return_car_store">请选择还车门店</string>
    <string name="return_car_time">还车时间</string>

    <string name="five_days">5天</string>
    <string name="ten_days">10天</string>
    <string name="fifteen_days">15天</string>

    <string name="is_naked_car_hire">裸车租用</string>
    <string name="is_naked_car_hire_explan">裸车:不包含司机及里程费用</string>
    <string name="hasTax">含税</string>
    <string name="has_lease4other">为他人叫车</string>
    <string name="phone_of_other">对方联系电话</string>
    <string name="phone_of_other_hine">请输入对方联系手机号</string>

    <string name="carry_driver">是否带司机</string>
    <string name="type_gwc">公务车</string>
    <string name="type_swc">商务车</string>
    <string name="type_zfc">执法车</string>
    <string name="type_yyc">越野车</string>
    <string name="type_pkc">皮卡车</string>
    <string name="type_kc">客车</string>

    <string name="next_step">下一步</string>

    <string name="please_validation">请验证身份</string>
    <string name="unit_of_account">单位账号</string>
    <string name="password">密码</string>
    <string name="remember_account_id">记住账号</string>
    <string name="validationing">验证中，请稍候…</string>
    <string name="validation_failure">验证失败！\n请检查您的账号及密码是否填写正确</string>

    <string name="choose_car">车辆选择</string>
    <string name="load_more">加载更多</string>
    <string name="nothing_car_data">无相关数据信息</string>

    <string name="data_loading">数据加载中…</string>

    <string name="choose_get_car_city">选择地区</string>

    <string name="confirm_order">确认订单</string>

    <string name="detail_cost">明细费用</string>
    <string name="car_costs">车辆费用</string>
    <string name="driver_costs">司机费用</string>
    <string name="mileage_costs">里程费用</string>
    <string name="send_car_to_home_costs">送车上门费</string>
    <string name="get_car_from_home_costs">上门取车费</string>
    <string name="sub_total">小计</string>
    <string name="discount_costs">优惠折扣</string>
    <string name="after_tax_price">税后总价</string>
    <string name="formalities_costs">手续费用</string>
    <string name="insurance_costs">保险费</string>
    <string name="other_costs">其它费用</string>
    <string name="total">合计</string>
    <string name="commit_order">提交订单</string>

    <string name="sms_login">短信登录</string>
    <string name="registered">注册</string>
    <string name="fast_login">快速登录</string>
    <string name="account_login">账号登录</string>
    <string name="phone_num">手机号</string>
    <string name="please_input_phone_num">请输入手机号码</string>
    <string name="auth_code">验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="please_input_auth_code">请输入验证码</string>
    <string name="please_input_password">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>

    <string name="step1_please_input_phone_num">1.输入手机号></string>
    <string name="step2_please_input_auth_code">2.输入验证码></string>
    <string name="step3_please_setting_password">3.设置密码></string>
    <string name="send_auth_code">发送验证码</string>
    <string name="commit_auth_code">提交验证码</string>
    <string name="setting_password">设置密码</string>
    <string name="confirm_password">确认密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
