<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout15"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/title_bar">

        <ImageView
            android:id="@+id/imageView_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@mipmap/ic_header_back"/>

        <TextView
            android:id="@+id/textView97"
            style="@style/title_bar_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/registered"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout16"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/relativeLayout15"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_inputPhoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/step1_please_input_phone_num"
            android:textColor="@color/title_bar"
            android:textSize="@dimen/normalTextSize"/>

        <TextView
            android:id="@+id/textView_inputSMS"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/step2_please_input_auth_code"
            android:textColor="@color/black"
            android:textSize="@dimen/normalTextSize"/>

        <TextView
            android:id="@+id/textView_inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/step3_please_setting_password"
            android:textColor="@color/black"
            android:textSize="@dimen/normalTextSize"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sendSMS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout16"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/editText_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:hint="@string/please_input_phone_num"
            android:paddingLeft="20dp"
            android:textSize="@dimen/normalEditTextSize"/>

        <Button
            android:id="@+id/button_sendSMS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/sms_btn_selector"
            android:enabled="false"
            android:text="@string/send_auth_code"
            android:textColor="@color/white"
            android:textSize="@dimen/normalTextSize"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_editSMS"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout16"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText_SMS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/please_input_auth_code"
                android:paddingLeft="20dp"
                android:textSize="@dimen/normalTextSize"/>

            <Button
                android:id="@+id/button_reSend"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/sms_btn_selector"
                android:enabled="false"
                android:text="60秒后重发"
                android:textColor="@color/white"
                android:textSize="@dimen/normalTextSize"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_commitSms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/sms_btn_selector"
            android:enabled="false"
            android:text="@string/commit_auth_code"
            android:textColor="@color/white"
            android:textSize="@dimen/normalTextSize"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout16"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/editText_password01"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:hint="@string/setting_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textSize="@dimen/normalEditTextSize"/>

        <TextView
            android:id="@+id/textView110"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/line_background"/>

        <EditText
            android:id="@+id/editText_password02"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:textSize="@dimen/normalEditTextSize"/>

        <Button
            android:id="@+id/button_zuce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:background="@drawable/sms_btn_selector"
            android:text="@string/registered"
            android:textColor="@color/white"
            android:textSize="@dimen/normalTextSize"/>
    </LinearLayout>
</RelativeLayout>
