<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_dache_jg_choose_city_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:background="@drawable/dachezuche_linearlayout_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dachezuche_gray_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/get_car_city"/>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@color/line_gray"/>

        <TextView
            android:id="@+id/textView_take_car_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/please_choose"
            android:textSize="@dimen/normalTextSize"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@mipmap/dache_arrow_right"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_dache_jg_order_get_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dachezuche_linearlayout_selector"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_org_get_car_stores_title"
                style="@style/dachezuche_gray_small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/get_car_store"/>

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@color/line_gray"/>

            <bmcx.aiton.com.passenger.view.customview.MarqueeTextView
                android:id="@+id/tv_dache_jg_store_name_get"
                style="@style/dachezuche_gray_small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/please_choose_get_car_store"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/dache_arrow_right"/>
        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@color/line_gray"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_car_to_home"
                android:textSize="10dp"/>

            <bmcx.aiton.com.passenger.view.customview.UISwitchButton
                android:id="@+id/swb_org_is_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
        </LinearLayout>


        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="12dp"-->
        <!--android:src="@mipmap/loction_img"/>-->

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_gray"/>

    <LinearLayout
        android:id="@+id/ll_dache_jg_choose_city_return"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/dachezuche_linearlayout_selector"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/dachezuche_gray_small_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/return_car_city"/>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@color/line_gray"/>

        <TextView
            android:id="@+id/textView_return_car_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/please_choose"
            android:textSize="@dimen/normalTextSize"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@mipmap/dache_arrow_right"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width"
        android:background="@color/line_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_dache_jg_order_return_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/dachezuche_linearlayout_selector"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_org_retrun_car_stores_title"
                style="@style/dachezuche_gray_small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/return_car_store"/>

            <TextView
                android:layout_width="0.5dp"
                android:layout_height="35dp"
                android:layout_margin="10dp"
                android:background="@color/line_gray"/>

            <bmcx.aiton.com.passenger.view.customview.MarqueeTextView
                android:id="@+id/tv_dache_jg_store_name_return"
                style="@style/dachezuche_gray_small_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/please_choose_return_car_store"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/dache_arrow_right"/>
        </LinearLayout>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="35dp"
            android:layout_margin="10dp"
            android:background="@color/line_gray"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_car_from_home"
                android:textSize="10dp"/>

            <bmcx.aiton.com.passenger.view.customview.UISwitchButton
                android:id="@+id/swb_org_is_get"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>
        </LinearLayout>

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="12dp"-->
        <!--android:src="@mipmap/loction_img"/>-->

    </LinearLayout>

</LinearLayout>