<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout13"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_zuche_choose_city_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:src="@mipmap/icon_back_dache"/>

        <TextView
            style="@style/dachezuche_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/choose_get_car_city"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout13"
        android:layout_marginTop="10dp"
        android:background="@color/white">

        <ListView
            android:id="@+id/lv_dachezuche_city_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_choose_city_more"/>

        <TextView
            android:id="@+id/tv_choose_city_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/load_more"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_loading_remind_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:indeterminateDrawable="@drawable/progressbar_animated_rotate"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/data_loading"
            android:textSize="@dimen/normalTextSize"/>
    </LinearLayout>

</RelativeLayout>
