<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="12dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_car_type_list_pop_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector_white_system_gray"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@mipmap/ic_search_close"
                android:visibility="invisible"/>

            <TextView
                style="@style/dachezuche_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/choose_car"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:src="@mipmap/ic_search_close"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/line_color"/>

        <ListView
            android:id="@+id/lv_car_type_list_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/tv_btn_get_more"
            android:layout_weight="1">
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/line_color"/>

        <TextView
            android:id="@+id/tv_btn_get_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_selector_white_system_gray"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/load_more"
            android:textSize="@dimen/normalTextSize"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/nothing_car_data"
        android:textSize="22dp"
        android:visibility="gone"/>
</RelativeLayout>